old-ignore/05-k8s-yamls/02-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: my-app-deployment
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template: # Pod tempalte
    metadata:
      name: my-app
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: my-repo/my-app:1.0
        ports:
        - containerPort: 8080
